sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:11: error: not found: value echangeDernier
  } while(echangeDernier)
          ^